# httpxx-types

./: .gitmodules  CMakeLists.txt
cmake/: Findhttp_parser.cmake  Findstreams++.cmake
example/: CMakeLists.txt  main.cpp
include/httpxx-types/: header.hpp  methods.hpp  request.hpp  status-codes.hpp  stream.hpp  url.hpp
src/: CMakeLists.txt  header.cpp  methods.cpp  request.cpp  status-codes.cpp  url.cpp
